--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,13 @@ html{
     padding: 2rem;
 }
 
+.selectForm_numberInput{
+    width: 30%;
+    font-size: 1.5rem;
+    padding: 1rem;
+    text-align: center;
+}
+
 .card_Section{
     width: 100%;
     display: flex;
@@ -68,14 +75,14 @@ html{
 
 .form{
     text-align: center;
-    padding: 2rem;
     width: 100%;
 }
 
 .form_text_input{
     text-align: center;
     width: 60%;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
+    padding: 1rem;
 }
 
 .form_submit{
